Thu Jun 17 12:56:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/idl/dds4ccm_Base.idl:
        * connectors/dds4ccm/idl/dds_rtf2_dcps_instance_handle.idl:
          Use full path for the include

Thu Jun 17 12:41:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/general.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/idl.html:
          Update.

Thu Jun 17 12:28:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/general.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/idl.html:
          Update.

Thu Jun 17 11:43:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/idl.html:
          Extended and corrected some minor errors.

Thu Jun 17 11:27:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ports/Shapes_defn.idl:
          Removed COLOR enum since it isn't used.

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/general.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/idl.html:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/images:
        * connectors/dds4ccm/tutorials/Shapes/Tutorial/images/system.png:
          Starter.

Thu Jun 17 11:22:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/Sender/CFTLS_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/PSLDeadline/Sender/PSL_DeadlineTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/Sender/PSL_SampleLost_Sender_exec.cpp:
        * connectors/dds4ccm/tests/PortUsage/EventComponent/PortUsageEvent_Component_exec.cpp:
        * connectors/dds4ccm/tests/PortUsage/StateComponent/PortUsageState_Component_exec.cpp: