@@ -1,3 +1,14 @@
+Thu Jun 17 12:57:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
+	  Clean up.
+
+        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp:
+        * DAnCE/DomainApplication/Domain_Application_Impl.cpp:
+        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
+	  Fixed plan teardown; added missing destroy of managers in process.
+	  Added -f|--force argument to plan launcher.
+
 Thu Jun 17 12:56:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/idl/dds4ccm_Base.idl:
